--- a/api/package.json
+++ b/api/package.json
@@ -1,7 +1,7 @@
 {
   "name": "jwt-refresh-token",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/index.ts",
   "author": "Thomas Melchers",
   "license": "",
   "dependencies": {
@@ -9,22 +9,30 @@
     "config": "^3.3.7",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "mongoose": "^6.4.4",
+    "pino": "^8.1.0",
+    "pino-pretty": "^8.1.0"
   },
   "scripts": {
-    "dev": "nodemon --config nodemon.json src/index.ts"
+    "dev": "nodemon --exec ts-node src/index.ts",
+    
+    "start": "node build/index.js",
+    "postinstall": "tsc"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/config": "^0.0.41",
-    "@types/lodash": "^4.14.182",
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.12",
     "@types/jsonwebtoken": "^8.5.2",
+    "@types/lodash": "^4.14.182",
     "@types/node": "^15.12.4",
+    "@types/pino": "^7.0.5",
     "ts-node": "^10.0.0",
     "typescript": "^4.3.4"
   }
