--- a/api/package.json
+++ b/api/package.json
@@ -5,6 +5,7 @@
   "author": "Thomas Melchers",
   "license": "",
   "dependencies": {
+    "@types/dotenv": "^8.2.0",
     "bcrypt": "^5.0.1",
     "config": "^3.3.7",
     "cookie-parser": "^1.4.5",
@@ -19,7 +20,6 @@
   },
   "scripts": {
     "dev": "nodemon --exec ts-node src/index.ts",
-    
     "start": "node build/index.js",
     "postinstall": "tsc"
   },
