--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
   "scripts": {
     "dev": "nodemon --exec ts-node src/index.ts",
     "start": "node build/index.js",
-    "postinstall": "tsc",
-    "heroku-postbuild" : "YARN_CONFIG_PRODUCTION=false yarn install --prefix ui && yarn build --prefix ui"
+    "heroku-postbuild" : "YARN_CONFIG_PRODUCTION=false yarn install --prefix ui && yarn build --prefix ui",
+    "postinstall": "tsc"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
