--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "scripts": {
     "dev": "nodemon --exec ts-node src/index.ts",
     "start": "node build/index.js",
+    "build": "tsc",
     "postinstall": "tsc"
   },
   "devDependencies": {
