--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
   "scripts": {
     "dev": "nodemon --exec ts-node src/index.ts",
     "start": "node build/index.js",
-    "build": "tsc",
-    "postinstall": "tsc"
+    "build": "tsc"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
