--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "lodash": "^4.17.21",
     "mongoose": "^6.4.4",
     "pino": "^8.1.0",
-    "pino-pretty": "^8.1.0"
+    "pino-pretty": "^8.1.0",
+    "ts-node": "^10.0.0"
   },
   "scripts": {
     "dev": "nodemon --exec ts-node src/index.ts",
@@ -32,8 +33,7 @@
     "@types/jsonwebtoken": "^8.5.2",
     "@types/lodash": "^4.14.182",
     "@types/node": "^15.12.4",
-    "@types/pino": "^7.0.5",
-    "ts-node": "^10.0.0",
+    "@types/pino": "^7.0.5", 
     "typescript": "^4.3.4"
   }
 }
