expire access token

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 DATABASEURL=mongodb+srv://thomas:Luna1987@refreshtoken.xr9wmwb.mongodb.net/?retryWrites=true&w=majority
 
-NODE_ENV=production
+NODE_ENV=dev
 
 EXPIREACCESSTOKEN=5s
 EXPIREVERIFYTOKEN=1y
